--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /cafetera/build/
 /ProyectoEscuela-master/nbproject/private/
 /cafetera/dist/
+/AdministracionMejorada/nbproject/private/
+/AdministracionMejorada/build/
