--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /AdministracionMejorada/dist/
 /Conversiones/nbproject/private/
 /Conversiones/build/
+/ConversionesMejorado/nbproject/private/
+/ConversionesMejorado/build/
