--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /Conversor1.0/dist/
 /Alexisbb/nbproject/private/
 /Alexisbb/build/
+/VentaCafe/nbproject/private/
+/TragaMonedas/nbproject/private/
