--- a/ADAS/nbproject/project.properties
+++ b/ADAS/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/ADAS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.galapagos.jar=galapagos/galapagos.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.galapagos.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,6 +73,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=src
+src.galapagos.dir=galapagos
 src.res.dir=res
+src.src.dir=src
 test.src.dir=test
