--- a/ADAS/nbproject/project.properties
+++ b/ADAS/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ada1_0.UsoImpresora
+main.class=ejer1_0.UsoImpresora
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
