--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 /Game/nbproject/private/
 /Game/build/
 /CafeteriaCampus/nbproject/private/
+/PruebaCirculos/nbproject/private/
+/PruebaCirculos/build/
+/PruebaCirculos/dist/
