--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@
 /The-Divine-Meme/nbproject/private/
 /ProyectoFinal/nbproject/private/
 /ProyectoEscuela-master/build/
+/NotepadMejorado/nbproject/private/
+/NotepadMejorado/build/
+/NotepadMejorado/dist/
+/Maze/nbproject/private/
+/Maze/build/
