--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 /NotepadMejorado/dist/
 /Maze/nbproject/private/
 /Maze/build/
+/JavaApplication11/nbproject/private/
+/JavaApplication11/build/
+/maquinaCafe-master/MaquinaCafe/nbproject/private/
