--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /JavaApplication11/nbproject/private/
 /JavaApplication11/build/
 /maquinaCafe-master/MaquinaCafe/nbproject/private/
+/Examen2/nbproject/private/
+/Examen2/build/
