--- a/Conversor1.0/nbproject/private/private.properties
+++ b/Conversor1.0/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\HikingCarrot\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Nicol\u00e1s\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
