--- a/Conversor2.0/nbproject/private/private.properties
+++ b/Conversor2.0/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 
-user.properties.file=C:\\Users\\HikingCarrot7\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Nicol\u00e1s\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
